@@ -26,7 +26,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
 import java.nio.file.Files;
@@ -44,6 +44,8 @@ import static com.ahli.interfacebuilder.ui.AppController.FATAL_ERROR;
 public final class SpringBootApplication {
 	
 	public static final int INTER_PROCESS_COMMUNICATION_PORT = 12317;
+	public static final String DB_FILE_NAME = "DB.mv.db";
+	public static final String DB_TRACE_FILE_NAME = "DB.trace.db";
 	private static final boolean USE_DOMAIN_SOCKET = true;
 	
 	public SpringBootApplication() {
@@ -110,7 +112,8 @@ public final class SpringBootApplication {
 			throws IOException, InterruptedException {
 		
 		log.trace("System's Log4j2 Configuration File: {}", () -> System.getProperty("log4j.configurationFile"));
-		log.info("Launch arguments: {}\nMax Heap Space: {}mb.",
+		log.info(
+				"Launch arguments: {}\nMax Heap Space: {}mb.",
 				() -> Arrays.toString(args),
 				() -> Runtime.getRuntime().maxMemory() / 1_048_576L);
 		
@@ -138,28 +141,38 @@ public final class SpringBootApplication {
 	 */
 	private static void migrateH2Db() throws IOException, InterruptedException {
 		final Path dbDir = getDbDir();
-		if (oldH2DbFilePresent()) {
-			backupH2Db("1.4.200", dbDir);
-			Files.deleteIfExists(dbDir.resolve("DB.mv.db"));
-			Files.deleteIfExists(dbDir.resolve("DB.trace.db"));
-		} else {
-			Files.deleteIfExists(dbDir.resolve("exportMigrate.zip"));
+		int oldVersion = oldH2DbFilePresent();
+		switch (oldVersion) {
+			case 1 -> {
+				backupH2Db("1.4.200", dbDir);
+				Files.deleteIfExists(dbDir.resolve(DB_FILE_NAME));
+				Files.deleteIfExists(dbDir.resolve(DB_TRACE_FILE_NAME));
+			}
+			case 2 -> {
+				backupH2Db("2.1.214", dbDir);
+				Files.deleteIfExists(dbDir.resolve(DB_FILE_NAME));
+				Files.deleteIfExists(dbDir.resolve(DB_TRACE_FILE_NAME));
+			}
+			default -> Files.deleteIfExists(dbDir.resolve("exportMigrate.zip"));
 		}
 	}
 	
-	private static boolean oldH2DbFilePresent() {
-		final Path dbPath = getDbDir().resolve("DB.mv.db");
+	private static int oldH2DbFilePresent() {
+		final Path dbPath = getDbDir().resolve(DB_FILE_NAME);
 		if (Files.exists(dbPath)) {
 			try (final BufferedReader brTest = Files.newBufferedReader(dbPath)) {
 				final String firstLine = brTest.readLine();
 				if (firstLine.contains(",format:1,")) {
-					return true;
+					return 1;
+				}
+				if (firstLine.contains(",format:2,")) {
+					return 2;
 				}
 			} catch (final IOException e) {
 				log.error("Failed to read H2 DB file to determine version.");
 			}
 		}
-		return false;
+		return 0;
 	}
 	
 	private static Path getDbDir() {
@@ -170,10 +183,9 @@ public final class SpringBootApplication {
 		final Path h2JarFile = dbDir.resolve("h2-" + h2Version + ".jar");
 		if (!Files.exists(h2JarFile)) {
 			// download e.g. https://repo1.maven.org/maven2/com/h2database/h2/1.4.200/h2-1.4.200.jar
-			final URL url = new URL("https",
-					"repo1.maven.org",
-					"maven2/com/h2database/h2/" + h2Version + "/h2-" + h2Version + ".jar");
-			try (final ReadableByteChannel readableByteChannel = Channels.newChannel(url.openStream());
+			final URI uri = URI.create(
+					"https://repo1.maven.org/maven2/com/h2database/h2/" + h2Version + "/h2-" + h2Version + ".jar");
+			try (final ReadableByteChannel readableByteChannel = Channels.newChannel(uri.toURL().openStream());
 			     final FileOutputStream fileOutputStream = new FileOutputStream(h2JarFile.toFile())) {
 				fileOutputStream.getChannel().transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
 			}
